--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Get Ready - Coming Soon Template</title>
+     <title>Get Ready For Flaghunt 2022 </title>
 <!-- 
 
 Get Ready Template
@@ -109,26 +109,8 @@ https://templatemo.com/tm-521-get-ready
 
                     <div class="col-md-12 col-sm-12">
                          <div class="home-info">
-                              <h1>We are getting ready <br>to launch new CREATIVE site!</h1>
+                              <h1>We are getting ready <br>to launch Flaghunt 2022</h1>
                               <!-- You can change the date time in init.js file -->
-                              <ul class="countdown">
-                                   <li>
-                                        <span class="days">28</span>
-                                        <h3>Days</h3>
-                                   </li>
-                                   <li>
-                                        <span class="hours">09</span>
-                                        <h3>hours</h3>
-                                   </li>
-                                   <li>
-                                        <span class="minutes">20</span>
-                                        <h3>minutes</h3>
-                                   </li>
-                                   <li>
-                                        <span class="seconds">00</span>
-                                        <h3>seconds</h3>
-                                   </li>     
-                              </ul>
                               <div class="subscribe-form">
                                 <form action="" method="get">
                                   <input type="email" name="email" class="form-control" placeholder="Enter your email" required="">
