--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Coming Soon 10</title>
+	<title>Flag Hunt 2022</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -54,7 +54,7 @@
 					We are very happy to inform you that CTF Community Bangladesh is going to organize the
 national-wide annual practical cybersecurity competition, ‘Flag Hunt 2022’ on 29th of October 2022 in
 Independent University Bangladesh. In this event, young cyber security enthusiasts will participate
-and compete in a 36-hour practical cyber security (ethical hacking) competition.
+and compete in a 20-hour practical cyber security (ethical hacking) competition.
 				</p>
 
 				<form class="contact100-form validate-form p-t-55 w-full">
