--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 
 			<div class="flex-w m-t-10 m-b-10">
-				<a href="#" class="size2 m1-txt1 flex-c-m how-btn1 trans-04">
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLSeeRIHkP2YkFBYczUUOqrHdL3kZl4Cws4x8JZJc2EkisPOknQ/viewform" class="size2 m1-txt1 flex-c-m how-btn1 trans-04">
 					Sign Up
 				</a>
 			</div>
