--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@ and compete in a 20-hour practical cyber security (ethical hacking) competition.
 
 			<!--  -->
 			<div class="flex-w flex-col where2 respon5">
-				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
+				<a href="https://www.facebook.com/events/612488943792699/" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
 					<i class="fa fa-facebook-official"></i>
 				</a>
 
-				<a href="#" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
+				<a href="https://twitter.com/ctfcommunitybd" class="size3 flex-c-m how-social trans-04 m-r-3 m-l-3 m-b-5">
 					<i class="fa fa-twitter-square"></i>
 				</a>
 
