--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                             <div class="col-12 pb-4">
                               <div class="description m-0">
                                  <span class="color-white font-size18 font-weight500">Hack amazing content</span>
-                                 <p>Learn with the best hacking content from HTB!</p>
+                                 <p>Learn with the best hacking content from Bangladeshi CTF community!</p>
                                  <br>
                                  <span class="color-white font-size18 font-weight500">Win the best prizes</span>
                                  <p>A never-seen-before prize list is awaiting the top teams!</p>
