--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                         <div class="row sponsors ">
                             <div class="col-12 mb-3 ">
                                 <a href="#" class="text-decoration-none" target="_blank">
-                                    <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;"> Community Pertner </h3>
+                                    <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;"> Community Partner </h3>
                                     <div class= "border-radius-10 text-center h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
                                             <img class="img-fluid" src="./images/diu.png" alt="DIU" width="350" height="125" /> </div>
