--- a/index.html
+++ b/index.html
@@ -448,10 +448,10 @@
 <!--                    timeline ends-->
 <!--                    sponsors-->
                     <section id="sponsors" class="pb-14">
-                        <div class="row pb-6">
-                            <div class="col-12 ">
+                        <div class="row pb-6" style="margin-top:25px; margin-bottom:25px">
+                            <div class="col-12 " >
                                 <h5 class="font-weight400 font-size13 color-green letter-spacing-2 pb-2 text-uppercase">sponsors</h5>
-                                <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;">Those Supporting FlagHunt 2022</h3>
+                                <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;">Those Supporting FLAG HUNT 2022</h3>
                             </div>
                         </div>
                         <div class="row sponsors ">
@@ -460,7 +460,7 @@
                                     <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;">Hosting Partner</h3>
                                     <div class= "border-radius-10 text-left h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
-                                            <img class="img-fluid" src="./images/gmh.png" alt="GotMyHost" width="350" height="125" /> </div>
+                                            <img class="img-fluid" src="./images/gmh.png" alt="GotMyHost" width="350" height="125" style="margin-top:30px; margin-bottom:30px"/> </div>
                                     </div>
                         <div class="row sponsors ">
                             <div class="col-12 mb-4 ">
@@ -468,7 +468,7 @@
                                     <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;"> Gold Sponsor </h3>
                                     <div class= "border-radius-10 text-center h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
-                                            <img class="img-fluid" src="./images/h1.jpg" alt="HackerOne" width="350" height="125" /> </div>
+                                            <img class="img-fluid" src="./images/h13.png" alt="HackerOne" width="350" height="125" style="margin-top:30px; margin-bottom:30px"/> </div>
                                     </div>
 
                         <div class="row sponsors ">
@@ -477,25 +477,25 @@
                                     <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;"> Strategic Partner </h3>
                                     <div class= "border-radius-10 text-center h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
-                                            <img class="img-fluid" src="./images/basis.jpg" alt="Basis" width="350" height="125" /> </div>
+                                            <img class="img-fluid" src="./images/basis3.png" alt="Basis" width="350" height="125" style="margin-top:30px; margin-bottom:30px"/> </div>
                                     </div>
 
                         <div class="row sponsors ">
                             <div class="col-12 mb-3 ">
                                 <a href="#" class="text-decoration-none" target="_blank">
-                                    <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;"> Vanue Partner </h3>
+                                    <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;"> Venue Partner </h3>
                                     <div class= "border-radius-10 text-center h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
-                                            <img class="img-fluid" src="./images/iub.png" alt="IUB" width="350" height="125" /> </div>
+                                            <img class="img-fluid" src="./images/iub2.png" alt="IUB" width="350" height="125" style="margin-top:30px; margin-bottom:30px"/> </div>
 
                                     </div>
                         <div class="row sponsors ">
                             <div class="col-12 mb-3 ">
                                 <a href="#" class="text-decoration-none" target="_blank">
-                                    <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;"> Community Partner </h3>
+                                    <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;"> Community Partners </h3>
                                     <div class= "border-radius-10 text-center h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
-                                            <img class="img-fluid" src="./images/diu.png" alt="DIU" width="350" height="125" /> </div>
+                                            <img class="img-fluid" src="./images/diu2.png" alt="DIU" width="350" height="125" style="margin-top:30px; margin-bottom:30px"/> </div>
                                     
                                     </div>
                        <div class="row sponsors ">
@@ -503,36 +503,36 @@
                                 <a href="#" class="text-decoration-none" target="_blank">
                                     <div class= "border-radius-10 text-center h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
-                                            <img class="img-fluid" src="./images/bbcbd.png" alt="BugBountyCommunityBD" width="350" height="125" /> </div>
+                                            <img class="img-fluid" src="./images/bbcbd-logo.png" alt="BugBountyCommunityBD" width="45%" height="45%" style="margin-top:30px; margin-bottom:30px"/> </div>
                                     </div>
                        <div class="row sponsors ">
                             <div class="col-12 mb-3 ">
                                 <a href="#" class="text-decoration-none" target="_blank">
                                     <div class= "border-radius-10 text-center h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
-                                            <img class="img-fluid" src="./images/sys00.png" alt="system00-security" width="350" height="125" /> </div>
+                                            <img class="img-fluid" src="./images/sys00.png" alt="system00-security" width="350" height="125" style="margin-top:30px; margin-bottom:30px"/> </div>
                                     </div>
                        <div class="row sponsors ">
                             <div class="col-12 mb-3 ">
                                 <a href="#" class="text-decoration-none" target="_blank">
                                     <div class= "border-radius-10 text-center h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
-                                            <img class="img-fluid" src="./images/infobd.png" alt="Infosec Bangladesh" width="350" height="125" /> </div>
+                                            <img class="img-fluid" src="./images/infobd.png" alt="Infosec Bangladesh" width="350" height="125" style="margin-top:30px; margin-bottom:30px"/> </div>
                                     </div>
                        <div class="row sponsors ">
                             <div class="col-12 mb-3 ">
                                 <a href="#" class="text-decoration-none" target="_blank">
-                                    <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;"> Supporting Partner </h3>
+                                    <h3 class="font-weight600 font-size32 color-white pb-3" style="color: #2ba1ff!important;"> Supporting Partners </h3>
                                     <div class= "border-radius-10 text-center h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
-                                            <img class="img-fluid" src="./images/iee_iub.png" alt="IEEE IUB STUDENT BRANCH." width="350" height="125" /> </div>
+                                            <img class="img-fluid" src="./images/iee_iub.png" alt="IEEE IUB STUDENT BRANCH." width="350" height="125" style="margin-top:30px; margin-bottom:30px"/> </div>
                                     </div>
                        <div class="row sponsors ">
                             <div class="col-12 mb-3 ">
                                 <a href="#" class="text-decoration-none" target="_blank">
                                     <div class= "border-radius-10 text-center h-20 diamond-sponsor">
                                         <div class="logo-wrapper position-relative d-flex justify-content-center align-items-center">
-                                            <img class="img-fluid" src="./images/riot.jpg" alt="RIoT Lab,IUB" width="350" height="125" /> </div>
+                                            <img class="img-fluid" src="./images/riot2.png" alt="RIoT Lab,IUB" width="350" height="125" style="margin-top:30px; margin-bottom:30px"/> </div>
                                     </div>
                                 </a>
                             </div>
