--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                         <div class="row pb-4">
                             <div class="col-12 ">
                                 <h5 class="font-weight400 font-size13 color-green letter-spacing-2 pb-2 text-uppercase">TIMELINE</h5>
-                                <h3 class="color-white font-size32 font-weight600" style="color: #2ba1ff!important;">FlagHunt 2022: Mark the dates</h3>
+                                <h3 class="color-white font-size32 font-weight600" style="color: #2ba1ff!important;">FLAG HUNT 2022: Mark the dates</h3>
                             </div>
                         </div>
                         <div class="row pt-4 pb-14">
@@ -431,14 +431,18 @@
                                             <div class="dotted-line"></div>
                                         </div>
                                         <div class="card w-100">
-                                            <h5 class="font-size18 mb-0">Date of Competition (Pre Qualify Round Online)</h5>
+                                            <h5 class="font-size18 mb-0">Pre Qualify Round - Online</h5>
                                             <p class="font-size-18 m-0">October 20, 2022</p>
-
+                                        </div>
+                                    </div>
+                                    <div class="timeline-row d-flex">
+                                        <div class="timeline-checkpoints">
+                                            <img src="https://www.hackthebox.com/images/landingv3/general_event/bullet-timeline.svg" alt="">
+                                            <div class="dotted-line"></div>
                                         </div>
                                         <div class="card w-100">
-                                            <h5 class="font-size18 mb-0">Date of Competition (Final Round Onside)</h5>
+                                            <h5 class="font-size18 mb-0">Final Round - Onsite</h5>
                                             <p class="font-size-18 m-0">October 29, 2022</p>
-
                                         </div>
                                     </div>
                                 </div>
