--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Flag Hunt 2022 - Redirecting to Registration Page</title>
+<title> Flag Hunt 2022 - Register Fast!</title>
 <meta property="og:image" content="./images/thumbnail.png">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1024">
