--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
                             </div>
                         </div>
                     </section><br><br>
+<!-- /flag --> 
 <!--                    timeline ends-->
 <!--                    sponsors-->
                     <section id="sponsors" class="pb-14">
