--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                                     <img class="img-fluid mb-3" src="./images/riot2.png" alt="RIoT Lab,IUB" width="350"/>
                                 </a>
                                 <a href="#" class="text-decoration-none" target="_blank">
-                                    <img class="img-fluid mb-3" src="./images/iee_iub.png" alt="IEEE IUB STUDENT BRANCH." width="350"/>
+                                    <img class="img-fluid mb-3" src="./images/310851938_1387759525084159_5296268325647932801_n-removebg-preview.png" alt="Jukti" width="350"/>
                                 </a>
                             </div>
                         </div>
