--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="keywords" content="CTFBD" />
     <meta name="robots" content="index, follow" />
     <meta property="og:site_name" content="FlagHunt-2022" />
-    <meta property="og:title" content="FlagHunt-2022 | Register Now!" />
+    <meta property="og:title" content="FlagHunt-2022 | CTF-BD" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./images/1.jpg" />
     <meta property="og:url" content="/" />
@@ -454,11 +454,11 @@
                                 <h3 class="font-weight400 font-size28 color-white pb-3" style="color: #2ba1ff!important;">Those Supporting the FlagHunt 2022</h3>
                             </div>
                         </div>
-                        <h3 class="font-weight600 font-size24 color-white pb-3">Hosting Partner</h3>
+                        <h3 class="font-weight600 font-size24 color-white pb-3"> Title Sponsor </h3>
                         <div class="row sponsors w-100 mb-5">
                             <div class="col w-100 d-flex justify-content-center text-center">
                                 <a href="https://gotmyhost.com" class="text-decoration-none" target="_blank">
-                                    <img class="img-fluid mb-3" src="./images/gmh.png" alt="GotMyHost" width="350" />
+                                    <img class="img-fluid mb-3" src="./images/riot2.png" alt="RIoT Lab,IUB" width="350" />
                                 </a>
                             </div>
                         </div>
@@ -467,6 +467,14 @@
                             <div class="col w-100 d-flex justify-content-center text-center">
                                 <a href="https://hackerone.com" class="text-decoration-none" target="_blank">
                                     <img class="img-fluid mb-3" src="./images/h13.png" alt="HackerOne" width="350"/>
+                                </a>
+                            </div>
+                        </div>
+                        <h3 class="font-weight600 font-size24 color-white pb-3"> Hosting Partner </h3>
+                        <div class="row sponsors w-100 mb-5">
+                            <div class="col w-100 d-flex justify-content-center text-center">
+                                <a href="https://gotmyhost.com" class="text-decoration-none" target="_blank">
+                                    <img class="img-fluid mb-3" src="./images/gmh.png" alt="GotMyHost" width="350" />
                                 </a>
                             </div>
                         </div>
@@ -499,16 +507,13 @@
                                     <img class="img-fluid mb-3" src="./images/sys00.png" alt="system00-security" width="350"/>
                                 </a>
                                 <a href="#" class="text-decoration-none" target="_blank">
-                                    <img class="img-fluid mb-3" src="./images/infobd.png" alt="Infosec Bangladesh" width="350"/>
+                                    <img class="img-fluid mb-3" src="./images/infobd2.png" alt="Infosec Bangladesh" width="350"/>
                                 </a>
                             </div>
                         </div>
                         <h3 class="font-weight600 font-size24 color-white pb-3"> Supporting Partners </h3>
                         <div class="row sponsors w-100 mb-5">
                             <div class="col w-100 d-block justify-content-center text-center">
-                                <a href="#" class="text-decoration-none" target="_blank">
-                                    <img class="img-fluid mb-3" src="./images/riot2.png" alt="RIoT Lab,IUB" width="350"/>
-                                </a>
                                 <a href="#" class="text-decoration-none" target="_blank">
                                     <img class="img-fluid mb-3" src="./images/310851938_1387759525084159_5296268325647932801_n-removebg-preview.png" alt="Jukti" width="350"/>
                                 </a>
