--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>FlagHunt-2022 </title>
+    <title>RIoT IUB Presents Flag Hunt 2022 </title>
     <link rel="preconnect" href="https://p.typekit.net/" crossorigin>
     <link rel="preconnect" href="https://use.typekit.net/" crossorigin>
     <link rel="preload" href="./assets/css/ryt3opf.css" as="style">
@@ -19,11 +19,11 @@
     <script src="/assets/unpkg/%40lottiefiles/lottie-player%401.3.1/dist/lottie-player.js"></script>
     <script src="/assets/unpkg/%40lottiefiles/lottie-interactivity%401.3.1/dist/lottie-interactivity.min.js"></script>
     <meta name="author" content="" />
-    <meta name="description" content="FlagHunt-2022" />
+    <meta name="description" content="RIoT IUB Presents Flag Hunt 2022" />
     <meta name="keywords" content="CTFBD" />
     <meta name="robots" content="index, follow" />
-    <meta property="og:site_name" content="FlagHunt-2022" />
-    <meta property="og:title" content="FlagHunt-2022 | CTF-BD" />
+    <meta property="og:site_name" content="RIoT IUB Presents Flag Hunt 2022" />
+    <meta property="og:title" content="RIoT IUB Presents Flag Hunt 2022 | CTF-BD" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./images/1.jpg" />
     <meta property="og:url" content="/" />
@@ -115,7 +115,7 @@
         <div class="nav-menu-container container">
             <nav class="navbar nav-b2c tk-neue-haas-unica py-3" style="max-width: 1200px;margin:auto;">
                 <a class="navbar-brand" href=/>
-                    <img class=" " src="./images/logo.png" width="auto" height="100" alt="FlagHunt-2022 " title="FlagHunt-2022 " />
+                    <img class=" " src="./images/logo.png" width="auto" height="100" alt="RIoT IUB Presents Flag Hunt 2022 " title="RIoT IUB Presents Flag Hunt 2022 " />
                 </a>
                 <div class="d-flex align-items-center">
                     <ul class="navbar-nav navbar-menu-actions my-2 ml-5 my-lg-0 font-weight500 d-none d-lg-block">
@@ -291,7 +291,7 @@
                         <div class="row ">
                             <div class="col-12 ">
                               <div class="description m-0">
-                                  <p>FlagHunt 2022 is a CyberSecurity competition organized by <span class="color-green">CTF Community Bangladesh</span> The contest is intended to mobilize the energies of everyone, their knowledge and abilities on hacking information systems and applications in a controlled and challenging environment.</p>
+                                  <p>RIoT IUB Presents Flag Hunt 2022 is a CyberSecurity competition organized by <span class="color-green">CTF Community Bangladesh</span> The contest is intended to mobilize the energies of everyone, their knowledge and abilities on hacking information systems and applications in a controlled and challenging environment.</p>
                               </div>
                             </div>
                         </div>
@@ -394,7 +394,7 @@
                         <div class="row pb-4">
                             <div class="col-12 ">
                                 <h5 class="font-weight600 font-size32 color-green letter-spacing-2 pb-2 text-uppercase">TIMELINE</h5>
-                                <h3 class="color-white font-size28 font-weight400" style="color: #2ba1ff!important;">FlagHunt 2022: Mark the dates</h3>
+                                <h3 class="color-white font-size28 font-weight400" style="color: #2ba1ff!important;">RIoT IUB Presents Flag Hunt 2022: Mark the dates</h3>
                             </div>
                         </div>
                         <div class="row pt-4 pb-14">
@@ -451,14 +451,15 @@
                         <div class="row pb-6" style="margin-top:25px; margin-bottom:25px">
                             <div class="col-12 " >
                                 <h5 class="font-weight600 font-size32 color-green letter-spacing-2 pb-2 text-uppercase">sponsors</h5>
-                                <h3 class="font-weight400 font-size28 color-white pb-3" style="color: #2ba1ff!important;">Those Supporting the FlagHunt 2022</h3>
+                                <h3 class="font-weight400 font-size28 color-white pb-3" style="color: #2ba1ff!important;">Those Supporting the RIoT IUB Presents Flag Hunt 2022</h3>
                             </div>
                         </div>
                         <h3 class="font-weight600 font-size24 color-white pb-3"> Title Sponsor </h3>
                         <div class="row sponsors w-100 mb-5">
                             <div class="col w-100 d-flex justify-content-center text-center">
-                                <a href="https://gotmyhost.com" class="text-decoration-none" target="_blank">
+                                <a href="https://sites.google.com/view/riotcenter" class="text-decoration-none" target="_blank">
                                     <img class="img-fluid mb-3" src="./images/riot2.png" alt="RIoT Lab,IUB" width="350" />
+                                    <p>RIoT Research Center, IUB</p>
                                 </a>
                             </div>
                         </div>
@@ -489,7 +490,7 @@
                         <h3 class="font-weight600 font-size24 color-white pb-3"> Venue Partner </h3>
                         <div class="row sponsors w-100 mb-5">
                             <div class="col w-100 d-flex justify-content-center text-center">
-                                <a href="#" class="text-decoration-none" target="_blank">
+                                <a href="http://www.iub.edu.bd/" class="text-decoration-none" target="_blank">
                                     <img class="img-fluid mb-3" src="./images/iub2.png" alt="IUB" width="350"/>
                                 </a>
                             </div>
@@ -497,13 +498,13 @@
                         <h3 class="font-weight600 font-size24 color-white pb-3"> Community Partners </h3>
                         <div class="row sponsors w-100 mb-5">
                             <div class="col w-100 d-block justify-content-center text-center">
-                                <a href="#" class="text-decoration-none" target="_blank">
+                                <a href="https://diucybercon.com" class="text-decoration-none" target="_blank">
                                     <img class="img-fluid mb-3" src="./images/diu2.png" alt="DIU" width="350" />
                                 </a>
-                                <a href="#" class="text-decoration-none" target="_blank">
+                                <a href="https://twitter.com/bbcbd_official" class="text-decoration-none" target="_blank">
                                     <img class="img-fluid mb-3" src="./images/bbcbd-logo.png" alt="BugBountyCommunityBD" width="350"/>
                                 </a>
-                                <a href="#" class="text-decoration-none" target="_blank">
+                                <a href="http://system00-sec.com/" class="text-decoration-none" target="_blank">
                                     <img class="img-fluid mb-3" src="./images/sys00.png" alt="system00-security" width="350"/>
                                 </a>
                                 <a href="#" class="text-decoration-none" target="_blank">
@@ -657,7 +658,7 @@
                 <div class="d-none d-lg-block col-lg-4 ml-md-5 right-sidebar">
                     <div class="position-sticky d-none d-lg-block pb-6 sticky-content">
                         <div class="reservation-card bg-color-blue-nav color-white">
-                            <p class="text-center color-green font-size32 font-weight600">FlagHunt 2022</p>
+                            <p class="text-center color-green font-size32 font-weight600">RIoT IUB Presents Flag Hunt 2022</p>
                             <p class="date" style="color: #2ba1ff!important;">October 20th - 29th, 2022</p>
                             <p class="color-white">Please read the instructions carefully and fill out the form.</p>
                             <div class="reservation-card__tags pb-4">
@@ -695,7 +696,7 @@
         <div class="row">
             <div class="col-12 mb-5 text-center">
                 <a class="d-inline-block" href="/">
-                    <img alt="FlagHunt-2022" src="images/logo.png" style="width: auto; height: 100px">
+                    <img alt="RIoT IUB Presents Flag Hunt 2022" src="images/logo.png" style="width: auto; height: 100px">
                 </a>
                 <a class="link main-link " href="javascript:void(0)" style="font-size: 13px; letter-spacing: 1.2px; font-weight: 600;">Follow Us</a>
                 <div class="social-icons mt-2">
