--- a/index.html
+++ b/index.html
@@ -470,6 +470,11 @@
                                     <img class="img-fluid mb-3" src="./images/h13.png" alt="HackerOne" width="350"/>
                                 </a>
                             </div>
+                            <div class="col w-100 d-flex justify-content-center text-center">
+                                <a href="https://trustaira.com" class="text-decoration-none" target="_blank">
+                                    <img class="img-fluid mb-3" src="./images/ta_2.png" alt="Trustaira Ltd." width="350"/>
+                                </a>
+                            </div>
                         </div>
                         <h3 class="font-weight600 font-size24 color-white pb-3"> Hosting Partner </h3>
                         <div class="row sponsors w-100 mb-5">
