--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                                     <img class="img-fluid mb-3" src="./images/logo600.png" alt="HTB" width="350"/>
                                 </a>
                                 <a href="#" class="text-decoration-none" target="_blank">
-                                    <img class="img-fluid mb-3" src="./images/IMG-20221019-WA0000.jpg" alt="VuLNX" width="350"/>
+                                    <img class="img-fluid mb-3" src="./images/vx.png" alt="VuLNX" width="350"/>
                                 </a>
                             </div>
                         </div>
