--- a/index.html
+++ b/index.html
@@ -500,17 +500,6 @@
                                 </a>
                             </div>
                         </div>
-                        <h3 class="font-weight600 font-size24 color-white pb-3"> Co-Sponsors </h3>
-                        <div class="row sponsors w-100 mb-5">
-                            <div class="col w-100 d-block justify-content-center text-center">
-                                <a href="#" class="text-decoration-none" target="_blank">
-                                    <img class="img-fluid mb-3" src="./images/logo600.png" alt="HTB" width="350"/>
-                                </a>
-                                <a href="#" class="text-decoration-none" target="_blank">
-                                    <img class="img-fluid mb-3" src="./images/vx.png" alt="VuLNX" width="350"/>
-                                </a>
-                            </div>
-                        </div>
                         <h3 class="font-weight600 font-size24 color-white pb-3"> Community Partners </h3>
                         <div class="row sponsors w-100 mb-5">
                             <div class="col w-100 d-block justify-content-center text-center">
@@ -563,21 +552,21 @@
                                                         <div class="medal-header">
                                                             <img class="medal-header__image" width="153" src="./images/prizes/1st.png" alt="Hack The Box">
                                                             <p class="medal-header__placement font-size24 font-weight600">First Place</p>
-                                                            <p class="medal-header__reward font-size28 font-weight500"> CTF-BD Prize Box</p>
+                                                            <p class="medal-header__reward font-size28 font-weight500">&#2547 50,000 & Prize Box</p>
                                                         </div>
                                                     </div>
                                                     <div class="medal gold">
                                                         <div class="medal-header">
                                                             <img class="medal-header__image" width="153" src="./images/prizes/2nd.png" alt="Hack The Box">
                                                             <p class="medal-header__placement font-size24 font-weight600">Second Place</p>
-                                                            <p class="medal-header__reward font-size28 font-weight500"> CTF-BD Prize Box</p>
+                                                            <p class="medal-header__reward font-size28 font-weight500">&#2547 30,000 & Prize Box</p>
                                                         </div>
                                                     </div>
                                                     <div class="medal gold">
                                                         <div class="medal-header">
                                                             <img class="medal-header__image" width="153" src="./images/prizes/3rd.png" alt="Hack The Box">
                                                             <p class="medal-header__placement font-size24 font-weight600">Third Place</p>
-                                                            <p class="medal-header__reward font-size28 font-weight500">CTF-BD Prize Box</p>
+                                                            <p class="medal-header__reward font-size28 font-weight500">&#2547 20,000 & Prize Box</p>
                                                         </div>
                                                     </div>
                                                 </div>
