--- a/index.html
+++ b/index.html
@@ -484,6 +484,17 @@
                                 </a>
                             </div>
                         </div>
+                          <h3 class="font-weight600 font-size24 color-white pb-3"> Co-Sponsors </h3>
+                          <div class="row sponsors w-100 mb-5">
+                            <div class="col w-100 d-block justify-content-center text-center">
+                                <a href="#" class="text-decoration-none" target="_blank">
+                                    <img class="img-fluid mb-3" src="./images/logo600.png" alt="HTB" width="350"/>
+                                </a>
+                                <a href="#" class="text-decoration-none" target="_blank">
+                                    <img class="img-fluid mb-3" src="./images/img/vx.png" alt="VuLNX" width="350"/>
+                                </a>
+                            </div>
+                        </div>
                         <h3 class="font-weight600 font-size24 color-white pb-3"> Strategic Partner </h3>
                         <div class="row sponsors w-100 mb-5">
                             <div class="col w-100 d-flex justify-content-center text-center">
