--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                                     <img class="img-fluid mb-3" src="./images/logo600.png" alt="HTB" width="350"/>
                                 </a>
                                 <a href="#" class="text-decoration-none" target="_blank">
-                                    <img class="img-fluid mb-3" src="./images/img/vx.png" alt="VuLNX" width="350"/>
+                                    <img class="img-fluid mb-3" src="./images/vx.png" alt="VuLNX" width="350"/>
                                 </a>
                             </div>
                         </div>
