--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                           <h3 class="font-weight600 font-size24 color-white pb-3"> Co-Sponsors </h3>
                           <div class="row sponsors w-100 mb-5">
                             <div class="col w-100 d-block justify-content-center text-center">
-                                <a href="#" class="text-decoration-none" target="_blank">
+                                <a href="https://www.hackthebox.com/" class="text-decoration-none" target="_blank">
                                     <img class="img-fluid mb-3" src="./images/logo600.png" alt="HTB" width="350"/>
                                 </a>
                                 <a href="#" class="text-decoration-none" target="_blank">
