--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Flag Hunt 2022</title>
+	<title>Flag Hunt 2023</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -43,14 +43,13 @@
 			<div class="where3 wsize2 respon1">
 				<h3 class="l1-txt2 p-b-30 respon6 respon7">
 					site under construction 
-					Flag Hunt 2022
+					Flag Hunt 2023
 					
 				</h3>
 
 				<p class="m2-txt1 respon6">
 					We are very happy to inform you that CTF Community Bangladesh is going to organize the
-national-wide annual practical cybersecurity competition, ‘Flag Hunt 2022’ on 29th of October 2022 in
-Independent University Bangladesh. In this event, young cyber security enthusiasts will participate
+national-wide annual practical cybersecurity competition, ‘Flag Hunt 2023'. In this event, young cyber security enthusiasts will participate
 and compete in a 20-hour practical cyber security (ethical hacking) competition.
 				</p>
 				
@@ -70,7 +69,7 @@ and compete in a 20-hour practical cyber security (ethical hacking) competition.
 			<!--  -->
 			<div class="flex-w flex-col cd100 p-t-34 respon3">
 				<div class="flex-col wsize1 m-b-40 respon4">
-					<span class="l1-txt1 p-b-30 days">27</span>
+					<span class="l1-txt1 p-b-30 days">340</span>
 					<span class="s1-txt1">Days</span>
 				</div>
 
